--- a/overlay-ev/evervolv/sdk/services/res/res/values/config.xml
+++ b/overlay-ev/evervolv/sdk/services/res/res/values/config.xml
@@ -18,13 +18,13 @@
 <resources>
     <!-- Paths to the libraries that contain device specific key handlers -->
     <string-array name="config_deviceKeyHandlerLibs" translatable="false">
-        <item>/system/priv-app/LineageParts/LineageParts.apk</item>
+        <item>/system/priv-app/EVToolbox/EVToolbox.apk</item>
         <item>/system/priv-app/OnePlusCameraHelper/OnePlusCameraHelper.apk</item>
     </string-array>
 
     <!-- Names of the key handler classes -->
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
-        <item>org.lineageos.lineageparts.gestures.KeyHandler</item>
+        <item>com.evervolv.toolbox.gestures.KeyHandler</item>
         <item>org.lineageos.camerahelper.KeyHandler</item>
     </string-array>
 
