--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -464,4 +464,10 @@
          and one pSIM) -->
     <integer name="config_num_physical_slots">2</integer>
 
+    <!-- Display 90Hz blacklist. Apps that do not work well when the display refreshes at 90Hz.
+         When these apps are visible, the display's refresh rate gets fixed to 60Hz. -->
+    <string-array name="config_highRefreshRateBlacklist">
+        <item>com.nianticlabs.pokemongo</item>
+    </string-array>
+
 </resources>
