--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -471,6 +471,7 @@
         <item>com.nianticlabs.pokemongo</item>
         <item>com.waze</item>
         <item>com.tencent.mm</item>
+        <item>com.google.android.documentsui</item>
     </string-array>
 
 </resources>
