sm8150-common: setup udfps overlays
Signed-off-by: Pranav <npv12@iitbbs.ac.in>
Change-Id: Ia72aa392f6a0a4b3229be5ecbe7c20e54e012659
Signed-off-by: mukesh22584 <mks22584@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -25,4 +25,12 @@
 
     <!-- Preferred refresh rate at keyguard, if supported by the display -->
     <integer name="config_keyguardRefreshRate">90</integer>
+
+    <!-- HBM type of UDFPS overlay.
+            0 - GLOBAL HBM 
+            1 - LOCAL HBM
+    -->
+    <integer name="config_udfps_hbm_type">0</integer>
+
+    <integer name="config_udfpsEnrollProgressBar" translatable="false">100</integer>
 </resources>
