--- a/overlay-ev/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-ev/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -21,14 +21,12 @@
      for different hardware and product builds. -->
 <resources>
 
-    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
-     vibrator is capable of subtle vibrations -->
-    <bool name="config_vibrateOnIconAnimation">true</bool>
+    <!-- HBM type of UDFPS overlay.
+            0 - GLOBAL HBM 
+            1 - LOCAL HBM
+    -->
+    <integer name="config_udfps_hbm_type">0</integer>
 
-    <!-- Whether to show a warning notification when device's skin temperature is high. -->
-    <integer name="config_showTemperatureWarning">1</integer>
-
-    <!-- Whether to show a alarm dialog when device's usb port is overheating. -->
-    <integer name="config_showUsbPortAlarm">1</integer>
+    <integer name="config_udfpsEnrollProgressBar" translatable="false">100</integer>
 
 </resources>
